adjust icon font-size to correct alignment

--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -5,7 +5,8 @@
   background-color: $colour-footer-background;
 
   :nth-child(3) i {
-    font-size: 0.6rem;
+    font-size: 0.2rem;
+    margin-right: 0.4rem;
   }
 
   h2 {
@@ -21,6 +22,7 @@
   }
 
   i {
-    padding-right: 0.5rem;
+    font-size: .9rem;
+    margin-right: 0.4rem;
   }
 }
